menu navbar spacing fix

--- a/style/styles.css
+++ b/style/styles.css
@@ -173,6 +173,10 @@ ul{
 
 }
 
+.navMargin {
+  margin-left: 24px;
+}
+
 
 
 
